# Palette-Director

./: CMakeLists.txt  README.md
doc/installer/: README.txt
javascript/: director-status-fetcher.js
src/: config-loader.c  mod_lbmethod_bybusyness.c  palette-director-types.c  palette-macros.h  status-pages.c
